--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/components.css">
   <link rel="stylesheet" href="css/dashboard.css">
+  <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
   <div class="app-shell">
@@ -397,5 +398,6 @@
   </div>
 
   <script src="js/main.js"></script>
+  <script src="js/menu.js"></script>
 </body>
 </html>
