--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="app-shell">
     <!-- Sidebar -->
-    <aside class="sidebar">
+    <aside id="sidebar" class="sidebar" role="dialog" aria-modal="true">
       <div class="sidebar-top">
         <div class="logo">
           <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
@@ -80,9 +80,15 @@
       </div>
     </aside>
 
+    <!-- Backdrop -->
+    <div id="backdrop" class="backdrop" hidden></div>
+
     <!-- Top Bar -->
     <header class="topbar">
       <div class="topbar-left">
+        <button id="navToggle" class="hamburger" aria-label="Open menu" aria-controls="sidebar" aria-expanded="false">
+          <span aria-hidden="true"></span><span aria-hidden="true"></span><span aria-hidden="true"></span>
+        </button>
         <h1 class="page-title">My Dashboard</h1>
       </div>
       
@@ -398,6 +404,6 @@
   </div>
 
   <script src="js/main.js"></script>
-  <script src="js/menu.js"></script>
+  <script src="js/menu.js" defer></script>
 </body>
 </html>
